# CEiiA-Collective_Capturing-construction-knowledge-before-it-disappears

./: .env.example  .gitignore  README.md  TECH_REPORT.md  pyproject.toml  requirements.txt
data/raw/: DocumentoDescricao.docx
data/raw/BOM's/: PICUALT9_IS01A_BOM.xlsx  PICUALT9_IS01B_BOM.xlsx  PICUALT9_IS02A_BOM.xlsx  PICUALT9_IS02B_BOM.xlsx  PICUALT9_IS04A_BOM.xlsx  PICUALT9_IS04B_BOM.xlsx  PICUALT9_IS06A_BOM.xlsx  PICUALT9_IS06B_BOM.xlsx  PICUALT9_IS104A_BOM.xlsx  PICUALT9_IS104B_BOM.xlsx
data/raw/Desenhos Técnicos - ECOCIAF/: ecociaf_panel_features.csv
data/raw/Excel - Tempos Micro Tarefas/: Tempos_ECOCIAF_Tirados_Por_Beatriz.xlsx  Tempos_ECOCIAF_Tirados_por_Inês.xlsx  Tempos_PICUA_Tirado_por_(Beatriz).xlsx  Tempos_PICUA_Tirados_por_Inês.xlsx  Tempos_RObidos_Tirados_por_Diana.xlsx
data/raw/MES - ECOCIAF (Sequência de fabrico de todos os painéis de um devido dia)/: Estruturar+Placar 1_26.05.2026.xlsx
data/training/: ecociaf_times_long.parquet  metrics.json  micro_op_vocab.csv  panel_geometry.parquet  panel_geometry_review.csv  panel_geometry_review_wide.csv  picua_geometry.parquet  picua_geometry_review.csv  picua_geometry_wide.csv  picua_times_long.parquet  removed_observations.csv  scorecard.json  test_long.parquet  test_predictions.csv  training_clean.parquet  training_long.parquet  training_table.parquet  training_wide.csv
data/training/future/: experience_long.parquet  general_long.parquet  temperature_long.parquet  timeofday_long.parquet
data/training/future/experience/: champion.joblib  meta.json
data/training/future/general/: champion.joblib  meta.json
data/training/future/temperature/: champion.joblib  meta.json
data/training/future/timeofday/: champion.joblib  meta.json
data/training/model/: champion.joblib  leaderboard.json  meta.json
docs/: API.md  EXTRACTION.md  TECHNOLOGIES.md  TESTING.md
frontend/: app.jsx  enterprise.jsx  index.html
scripts/: api  extract_picua_text.py  pipeline
src/pipeline/: __init__.py  api.py  cli.py  estimate.py  excel_times.py  metrics.py  modeling.py  picua_times.py  predict_drawing.py  train.py  training_table.py
src/pipeline/extraction/: __init__.py  base.py  benchmark.py  prompt.py  runner.py  schema.py  splitter.py
src/pipeline/extraction/extractors/: __init__.py  claude.py  gemini.py  ollama.py
src/pipeline/future/: __init__.py  predict.py  synth.py  train.py
