[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline"
version = "0.2.0"
description = "Panel manufacturing task-duration prediction pipeline."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "PipeLine contributors" }]
keywords = ["ml", "manufacturing", "duration-prediction", "scikit-learn", "pipeline"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pymupdf>=1.24",
    "ezdxf>=1.3",
    "duckdb>=1.0",
    "pyarrow>=15",
    "pandas>=2.2",
    "polars>=0.20",
    "rapidfuzz>=3.6",
    "rich>=13.7",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "scikit-learn>=1.8,<1.9",
    "joblib>=1.4",
    "skops>=0.10",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "croniter>=2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
benchmark = ["optuna>=3.6", "catboost>=1.2", "lightgbm>=4.3", "xgboost>=2.0"]
analysis = ["shap>=0.45", "matplotlib>=3.8"]
dev = ["pytest>=8.0"]

[project.scripts]
pipeline = "pipeline.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
