[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline"
version = "0.2.0"
description = "Panel manufacturing task-duration prediction pipeline."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "PipeLine contributors" }]
keywords = ["ml", "manufacturing", "duration-prediction", "scikit-learn", "pipeline"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "pymupdf>=1.24",
    "pyarrow>=15",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "joblib>=1.4",
    "optuna>=3.6",
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "catboost>=1.2",
]

[project.optional-dependencies]
extraction = ["google-genai>=0.3", "anthropic>=0.40"]
autogluon = ["autogluon.tabular>=1.0"]

[project.scripts]
pipeline = "pipeline.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
